--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -11,7 +11,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        compiler_driver: [g++-9, g++-10, clang++, icpx]
+        compiler_driver: [g++-9, g++-10, clang++, icpx, icx]
         stdcxx: [14, 17, 20, 23]
         include:
         - compiler_driver: g++-9
@@ -22,6 +22,12 @@ jobs:
           compiler_prefix: /usr/bin
           cxx_flags_extra: "-stdlib=libc++"
         - compiler_driver: icpx
+          compiler_prefix: /opt/intel/oneapi/compiler/latest/linux/bin
+          # To get new URL, look here:
+          # https://www.intel.com/content/www/us/en/developer/articles/tool/oneapi-standalone-components.html#inpage-nav-6-undefined
+          compiler_url: https://registrationcenter-download.intel.com/akdlm/IRC_NAS/ebf5d9aa-17a7-46a4-b5df-ace004227c0e/l_dpcpp-cpp-compiler_p_2023.2.1.8_offline.sh
+          cxx_flags_extra: "-DMDSPAN_USE_BRACKET_OPERATOR=0"
+        - compiler_driver: icx
           compiler_prefix: /opt/intel/oneapi/compiler/latest/linux/bin
           # To get new URL, look here:
           # https://www.intel.com/content/www/us/en/developer/articles/tool/oneapi-standalone-components.html#inpage-nav-6-undefined
@@ -41,14 +47,14 @@ jobs:
     steps:
 
     - name: Cache icpx install
-      if: ${{ matrix.compiler_driver == 'icpx' }}
+      if: ${{ matrix.compiler_driver == 'icpx' || matrix.compiler_driver == 'icx' }}
       id: cache-icpx
       uses: actions/cache@v2
       with:
         path: /opt/intel/oneapi
         key: oneapi-${{ matrix.compiler_url}}
     - name: Install icpx
-      if: ${{ matrix.compiler_driver == 'icpx' && steps.cache-icpx.outputs.cache-hit != 'true' }}
+      if: ${{ (matrix.compiler_driver == 'icpx' || matrix.compiler_driver == 'icx') && steps.cache-icpx.outputs.cache-hit != 'true' }}
       run: |
         curl  --url ${{ matrix.compiler_url }} --output download.sh
         sudo sh -x download.sh -s -a -s --action install --eula accept
@@ -68,12 +74,12 @@ jobs:
     - name: Configure CMake
       shell: bash
       working-directory: ${{github.workspace}}/mdspan-build
-      run: CXX=${{ matrix.compiler_prefix}}/${{ matrix.compiler_driver }} cmake $GITHUB_WORKSPACE/mdspan-src -DMDSPAN_CXX_STANDARD=${{ matrix.stdcxx }} -DCMAKE_BUILD_TYPE=$BUILD_TYPE -DCMAKE_INSTALL_PREFIX=$GITHUB_WORKSPACE/mdspan-install -DMDSPAN_ENABLE_TESTS=ON -DMDSPAN_ENABLE_EXAMPLES=ON -DMDSPAN_ENABLE_BENCHMARKS=${{matrix.enable_benchmark}} -DMDSPAN_ENABLE_COMP_BENCH=ON -DCMAKE_CXX_FLAGS=${{matrix.cxx_flags_extra}}
+      run: CXX=${{ matrix.compiler_prefix}}/${{ matrix.compiler_driver }} cmake $GITHUB_WORKSPACE/mdspan-src -DMDSPAN_CXX_STANDARD=${{ matrix.stdcxx }} -DCMAKE_BUILD_TYPE=$BUILD_TYPE -DCMAKE_INSTALL_PREFIX=$GITHUB_WORKSPACE/mdspan-install -DMDSPAN_ENABLE_TESTS=ON -DMDSPAN_ENABLE_EXAMPLES=ON -DMDSPAN_ENABLE_BENCHMARKS=${{matrix.enable_benchmark}} -DMDSPAN_ENABLE_COMP_BENCH=ON -DCMAKE_CXX_FLAGS="-Werror -Wall -Wextra -Werror -pedantic ${{matrix.cxx_flags_extra}}"
 
     - name: Build
       shell: bash
       working-directory: ${{github.workspace}}/mdspan-build
-      run: make -j
+      run: make -j -k
 
     - name: Test
       working-directory: ${{github.workspace}}/mdspan-build
