--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -28,11 +28,7 @@ jobs:
           compiler_url: https://registrationcenter-download.intel.com/akdlm/IRC_NAS/ebf5d9aa-17a7-46a4-b5df-ace004227c0e/l_dpcpp-cpp-compiler_p_2023.2.1.8_offline.sh
           cxx_flags_extra: "-DMDSPAN_USE_BRACKET_OPERATOR=0"
         - compiler_driver: icpc
-          compiler_prefix: /opt/intel/oneapi/compiler/latest/linux/bin
-          # To get new URL, look here:
-          # https://www.intel.com/content/www/us/en/developer/articles/tool/oneapi-standalone-components.html#inpage-nav-6-undefined
-          compiler_url: https://registrationcenter-download.intel.com/akdlm/IRC_NAS/7f096850-dc7b-4c35-90b5-36c12abd9eaa/l_HPCKit_p_2024.1.0.560_offline.sh 
-          cxx_flags_extra: "-DMDSPAN_USE_BRACKET_OPERATOR=0"
+          compiler_prefix: /usr/bin
         - enable_benchmark: ON
         - stdcxx: 14
           enable_benchmark: OFF
@@ -46,15 +42,26 @@ jobs:
     name: ${{ matrix.compiler_driver }} C++${{ matrix.stdcxx }}
     steps:
 
+    - name: Install icpc
+      if: ${{ matrix.compiler_driver == 'icpc' }}
+      run: |
+        cd /tmp
+        wget https://apt.repos.intel.com/intel-gpg-keys/GPG-PUB-KEY-INTEL-SW-PRODUCTS.PUB
+        sudo apt-key add GPG-PUB-KEY-INTEL-SW-PRODUCTS.PUB
+        rm GPG-PUB-KEY-INTEL-SW-PRODUCTS.PUB
+        echo "deb https://apt.repos.intel.com/oneapi all main" | sudo tee /etc/apt/sources.list.d/oneAPI.list
+        sudo apt-get update
+        sudo apt-get install intel-oneapi-compiler-dpcpp-cpp-and-cpp-classic-2021.1.2
+        which icpc
     - name: Cache icpx install
-      if: ${{ matrix.compiler_driver == 'icpx' || matrix.compiler_driver == 'icpc' }}
+      if: ${{ matrix.compiler_driver == 'icpx' }}
       id: cache-icpx
       uses: actions/cache@v2
       with:
         path: /opt/intel/oneapi
         key: oneapi-${{ matrix.compiler_url}}
     - name: Install icpx
-      if: ${{ (matrix.compiler_driver == 'icpx' || matrix.compiler_driver == 'icpc') && steps.cache-icpx.outputs.cache-hit != 'true' }}
+      if: ${{ matrix.compiler_driver == 'icpx' && steps.cache-icpx.outputs.cache-hit != 'true' }}
       run: |
         curl  --url ${{ matrix.compiler_url }} --output download.sh
         sudo sh -x download.sh -s -a -s --action install --eula accept
