--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -20,7 +20,7 @@ jobs:
           compiler_prefix: /usr/bin
         - compiler_driver: clang++
           compiler_prefix: /usr/bin
-          cxx_flags_extra: "-stdlib=libc++"
+          cxx_flags_extra: "-stdlib=libc++ -Wno-gnu-zero-variadic-macro-arguments"
         - compiler_driver: icpx
           compiler_prefix: /opt/intel/oneapi/compiler/latest/linux/bin
           # To get new URL, look here:
