--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -53,6 +53,7 @@ jobs:
         sudo apt-get update
         sudo apt-get install intel-oneapi-compiler-dpcpp-cpp-and-cpp-classic-2021.1.2
         source /opt/intel/oneapi/setvars.sh
+        which icpc
         printenv >> $GITHUB_ENV
     - name: Cache icpx install
       if: ${{ matrix.compiler_driver == 'icpx' }}
