--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -28,7 +28,7 @@ jobs:
           compiler_url: https://registrationcenter-download.intel.com/akdlm/IRC_NAS/ebf5d9aa-17a7-46a4-b5df-ace004227c0e/l_dpcpp-cpp-compiler_p_2023.2.1.8_offline.sh
           cxx_flags_extra: "-DMDSPAN_USE_BRACKET_OPERATOR=0 -Wno-gnu-zero-variadic-macro-arguments -Wno-c++17-attribute-extensions"
         - compiler_driver: icpc
-          compiler_prefix: /usr/bin
+          compiler_prefix: /opt/intel/oneapi/compiler/2021.1.2/linux/bin/intel64
         - enable_benchmark: ON
         - stdcxx: 14
           enable_benchmark: OFF
